se terminó el parallax

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
         </div>
     </section>
     <section class="parallax">
-        <div class="containter">
-
+        <div class="container_parallax">
+            <div class="parallax_text">
+                <h2>Reasons To <br><span>Choose</span> Notebook</h2>
+                <p>Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                <input type="button" value="Get Started →" class="botones">
+            </div>
         </div>
     </section>
     <section class="images">
