Solo falta el footer y algunos detalles

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
             </div>
         </header>
         <div class="titulo">
-            <h4>YOUR BEST PARTNER</h4>
-            <h1>Pemodule</h1>
-            <input type="button" value="Get Started →" class="botones">
+            <div class="cabecera">
+                <h4>YOUR BEST PARTNER</h4>
+                <h1>Pemodule</h1>
+                <input type="button" value="Get Started →" class="botones">
+            </div>
         </div>
-        <div class="overlay"></div>
     </div>
     <section class="parte_uno">
         <div class="container">
@@ -52,7 +53,49 @@
         </div>
     </section>
     <section class="images">
-        
+        <div class="grid-container">
+            <div class="grid-item1">
+                <img src="img/s1.jpg">
+            </div>
+            <div class="grid-item2">
+                <img src="img/s2.jpg">
+            </div>
+            <div class="grid-item3">
+                <img src="img/s3.jpg">
+            </div>
+            <div class="grid-item4">
+                <img src="img/s4.jpg">
+            </div>
+        </div>
+    </section>
+    <section class="contact-us">
+        <div class="container-form">
+            <div class="info-form">
+                <h2>Send us <span>Message</span></h2>
+                <p>Most people who work in an office environment, buy computer products.</p>
+            </div>
+            <form action="#"  method="POST" class="formulario">
+                <div class="user-info">
+                    <input type="text" placeholder="Enter your name">
+                    <input type="text" placeholder="Enter email address">
+                </div>
+                <div class="mensaje">
+                    <textarea placeholder="Message" class="textarea"></textarea>
+                    <input type="submit" value="Send Message →" class="botones btnform">
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <section class="suscribe">
+        <div class="container-sus">
+            <div class="sus-text">
+                <h2>Subscribe for our <span>Newsletter</span></h2>
+                <input type="email" placeholder="Your email address" class="email">
+                <input type="button" value="Get Started →" class="botones mod">
+                <p>We won’t send any types of spam, Guranteed</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
