Solo falta el footer y algunas cosas

--- a/index.html
+++ b/index.html
@@ -86,16 +86,20 @@
             </form>
         </div>
     </section>
-
     <section class="suscribe">
         <div class="container-sus">
             <div class="sus-text">
                 <h2>Subscribe for our <span>Newsletter</span></h2>
                 <input type="email" placeholder="Your email address" class="email">
-                <input type="button" value="Get Started →" class="botones mod">
                 <p>We won’t send any types of spam, Guranteed</p>
             </div>
+            <input type="button" value="Get Started →" class="botones mod">
         </div>
+    </section>
+    <section class="footer">
+        <footer class="container-fot">
+
+        </footer>
     </section>
 </body>
 </html>
