Se terminó la página

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400|PT+Sans|Racing+Sans+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +19,8 @@
                         <li>HOME</li>
                         <li>GENERIC</li>
                         <li>ELEMENTS</li>
-                    </ul>
+                        <div class="equis"></div>
+                    </ul>           
                 </nav>
             </div>
         </header>
@@ -98,7 +100,20 @@
     </section>
     <section class="footer">
         <footer class="container-fot">
-
+            <nav class="menu-fot">
+                <ul>
+                    <li>Home</li>
+                    <li>Generic</li>
+                    <li>Elements</li>
+             </ul>
+            </nav>
+            <div class="logos">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-dribbble"></i>
+                    <i class="fab fa-behance"></i>
+            </div>
+            <p>Copyright ©2018 All rights reserved | This template is made with <i class="far fa-heart"></i> by <span>Colorlib</span></p>
         </footer>
     </section>
 </body>
